<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <TextView
        android:id="@+id/google_tab_name"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:background="@drawable/search_bar_background"
        android:gravity="center"
        android:text="@string/google_translate"
        android:textColor="@color/white"
        android:textSize="18sp"
        android:layout_alignParentTop="true"/>

    <LinearLayout
        android:id="@+id/input_text_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:layout_margin="10dp"
        android:layout_below="@id/google_tab_name">
        <TextView
            android:layout_width="110dp"
            android:layout_height="wrap_content"
            android:text="@string/translate_from"
            android:textSize="15sp"/>
        <TextView
            android:id="@+id/input_language"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/dark_blue"
            android:text="@string/english"
            android:textSize="16sp"/>
    </LinearLayout>
    <ImageButton
        android:id="@+id/facebook_button"
        android:src="@drawable/facebook_round_btn"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:scaleType="fitXY"
        android:background="@color/transparent"
        android:text="Share"
        android:layout_below="@id/google_tab_name"
        android:layout_toRightOf="@id/input_text_layout"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="6dp"/>
    <RelativeLayout
        android:id="@+id/input_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="7dp"
        android:layout_marginRight="7dp"
        android:background="@drawable/input_background"
        android:layout_below="@id/input_text_layout">
        <EditText
            android:id="@+id/translate_input"
            android:layout_width="275dp"
            android:layout_height="90dp"
            android:gravity="top"
            android:layout_marginLeft="10dp"
            android:cursorVisible="true"
            android:paddingLeft="3dp"
            android:background="@color/white"
            android:textCursorDrawable="@null"
            android:layout_centerVertical="true"/>

        <ImageButton
            android:id="@+id/translate_input_copy"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/transparent"
            android:src="@drawable/share_copy2x"
            android:layout_alignParentRight="true"
            android:layout_marginTop="10dp"
            android:layout_marginRight="10dp"/>
    </RelativeLayout>
    <LinearLayout
        android:id="@+id/result_text_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:layout_marginTop="5dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginBottom="5dp"
        android:layout_below="@id/input_layout">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/to"
            android:textSize="15sp"
            android:layout_marginRight="3dp"/>
        <TextView
            android:id="@+id/result_language"
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:textColor="@color/dark_blue"
            android:text="@string/vietnamese"
            android:textSize="16sp"/>
        <Button
            android:id="@+id/change_btn"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:background="@drawable/change2x"
            android:layout_marginLeft="60dp"/>
        <Button
            android:id="@+id/translate_btn"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:layout_marginLeft="40dp"
            android:background="@drawable/google_translate_button"
            android:text="@string/translate_button_text"
            android:textSize="16sp"
            android:textColor="@color/white"
            android:textAllCaps="false"/>
    </LinearLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="7dp"
        android:layout_marginRight="7dp"
        android:background="@drawable/input_background"
        android:layout_below="@id/result_text_layout">
        <EditText
            android:id="@+id/translate_result"
            android:layout_width="275dp"
            android:layout_height="90dp"
            android:background="@color/white"
            android:layout_marginLeft="10dp"
            android:paddingLeft="3dp"
            android:gravity="top"
            android:editable="false"
            android:cursorVisible="true"
            android:textCursorDrawable="@null"
            android:layout_centerVertical="true"/>

        <ImageButton
            android:id="@+id/translate_result_copy"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/transparent"
            android:src="@drawable/share_copy2x"
            android:layout_alignParentRight="true"
            android:layout_marginTop="10dp"
            android:layout_marginRight="10dp"/>
    </RelativeLayout>
</RelativeLayout>