<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="vn.bku_mobile.dictionary.activities.GameActivity">
    <ImageView
        android:id="@+id/img_header"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:scaleType="fitXY"
        android:src="@drawable/tempt"
        android:layout_alignParentTop="true"
        />
    <LinearLayout
        android:id="@+id/lnl_best_score"
        android:layout_below="@+id/img_header"
        android:layout_width="match_parent"
        android:layout_height="112dp"
        android:orientation="vertical"
        android:background="@drawable/best_score_background">
        <TextView
            android:id="@+id/tv_text_best_score"
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:gravity="center"
            android:text="@string/best_score"
            android:textColor="@color/white"
            android:textSize="18sp" />
        <TextView
            android:id="@+id/tv_best_score"
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:gravity="center|top"
            android:hint="0"
            android:textColorHint="@color/white"
            android:textColor="@color/white"
            android:textSize="24sp" />
    </LinearLayout>
    <ImageView
        android:id="@+id/img_footer"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:src="@drawable/footergame"
        android:scaleType="fitXY"
        android:layout_alignParentBottom="true"
        />
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/lnl_best_score"
        android:layout_above="@id/img_footer"
        android:background="#E9F2FF"
        >
        <View
            android:layout_width="match_parent"
            android:layout_height="3dp"
            android:background="@color/gameNameLine"
            android:layout_marginTop="55dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            />
        <TextView
            android:id="@+id/tv_game_name"
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:gravity="center"
            android:text="@string/game_name"
            android:textColor="@color/gameName"
            android:textSize="24sp" />
        <View
            android:layout_width="match_parent"
            android:layout_height="3dp"
            android:background="@color/gameNameLine"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            />
        <Button
            android:id="@+id/btn_high_score"
            android:layout_gravity="center"
            android:layout_width="200dp"
            android:scaleType="fitXY"
            android:layout_height="60dp"
            android:textColor="@color/white"
            android:text="@string/high_score"
            android:background="@drawable/btn_game_high_score"
            android:layout_marginTop="50dp"
            android:visibility="gone"
            />
        <Button
            android:id="@+id/btn_start_game"
            android:layout_gravity="center"
            android:layout_width="200dp"
            android:scaleType="fitXY"
            android:textAlignment="center"
            android:text="@string/game_start"
            android:textColor="@color/white"
            android:layout_height="60dp"
            android:background="@drawable/btn_game_start"
            android:layout_marginTop="90dp"
            />
    </LinearLayout>


</RelativeLayout>
